# x-sim

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: cmake-linux.yml  quint.yml
include/xsim/logging/: Logging.hpp
include/xsim/platform/: Clock.hpp  Realtime.hpp
include/xsim/scheduler/: CyclicScheduler.hpp  RuntimeStats.hpp  Task.hpp  TaskCompletion.hpp  TaskCycleContext.hpp  TaskDependency.hpp  TaskWorker.hpp  WcetViolationPolicy.hpp
include/xsim/shared/: SharedValue.hpp
include/xsim/tasks/: TaskCDMessage.hpp  TaskRegistry.hpp
quint/: shared_value.qnt  shared_value_locking.qnt
src/: main.cpp
src/logging/: Logging.cpp
src/platform/: ClockLinux.cpp  RealtimeLinux.cpp
src/scheduler/: CyclicScheduler.cpp  TaskCycleContext.cpp  TaskWorker.cpp
src/tasks/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskRegistry.cpp
